fix: link image tooltop position on safari

--- a/gno.land/pkg/gnoweb/frontend/css/input.css
+++ b/gno.land/pkg/gnoweb/frontend/css/input.css
@@ -51,7 +51,7 @@
   }
 
   .realm-view a {
-    @apply relative text-green-600 font-medium hover:underline;
+    @apply relative inline-block text-green-600 font-medium hover:underline;
   }
 
   .realm-view h1,
@@ -99,6 +99,18 @@
     @apply my-5;
   }
 
+  .realm-view img {
+    @apply max-w-full my-8 border border-gray-100 select-none rounded;
+  }
+
+  .realm-view p:has(> a:only-child > img) {
+    @apply my-8;
+  }
+
+  .realm-view p:has(> a:only-child > img) img {
+    @apply my-0;
+  }
+
   .realm-view strong {
     @apply font-bold text-gray-900;
   }
@@ -123,10 +135,6 @@
   .realm-view ul li,
   .realm-view ol li {
     @apply mb-2;
-  }
-
-  .realm-view img {
-    @apply max-w-full my-8 border border-gray-100 select-none rounded;
   }
 
   .realm-view figure {
